--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   socket_io_client: ^3.0.2
   firebase_core: ^3.12.1
   firebase_messaging: ^15.2.4
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
